--- a/nkl.html
+++ b/nkl.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <h1>NKL <br>Mídias Digitais</h1>
+        <h1>NKL</h1>
+        <h2>Mídias Digitais</h2>
         <p>Fotografia & Audiovisual</p>
     </header>
     <nav>
