--- a/contato.html
+++ b/contato.html
@@ -24,8 +24,8 @@
         <section class="format1">
             <p>Whatsapp: 11 94140-4977
             <br>Email: nklmidiasdigitais@gmail.com
-            <br>Instagram / Tiktok: @nkl.audiovisual
-            <br>Youtube: </p>
+            <br>Instagram / Tiktok:  @nkl.audiovisual
+            <br><a href="https://www.youtube.com/@nkl.audiovisual" target="_blank">YouTube</a>   /   <a href="https://banlek.com/nikolas_oliveira" target="_blank">Banlek</a>
         </section>
         <div class="back"><a href="nkl.html">Voltar</a></div>
     </main>
