--- a/portifolio.html
+++ b/portifolio.html
@@ -20,9 +20,54 @@
         <a href="contato.html">CONTATO</a>
     </nav>
     <main>
+        <h1>Veteranos da Seleção Brasileira de Futebol</h1><br>
         <section>
-            <h1>Trabalhos recentes</h1>
+            <input type="radio" class="slide-controller" name="slide" checked />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
             
+            <div class="slide-show" >
+              <ul class="slides-list" >
+                <li class="slide" >
+                  <img src="imagens/Elivelton - 436 x 725.jpg" alt="">
+                </li>
+                <li class="slide" >
+                  <img src="" />
+                </li>
+                <li class="slide" >
+                  <img src="" alt="" />
+                </li>
+                <li class="slide" >
+                  <img src="" alt="" />
+                </li>
+              </ul>
+            </div>
+        </section>
+<br>
+        <h1>Orquestra Municipal de Santa Isabel</h1><br>
+        <section>
+            <input type="radio" class="slide-controller" name="slide" checked />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            
+            <div class="slide-show" >
+              <ul class="slides-list" >
+                <li class="slide" >
+                  <img src="imagens/Elivelton - 436 x 725.jpg" />
+                </li>
+                <li class="slide" >
+                  <img src="" />
+                </li>
+                <li class="slide" >
+                  <img src="">
+                </li>
+                <li class="slide" >
+                  <img src="" />
+                </li>
+              </ul>
+            </div>
         </section>
     <div class="back"><a href="nkl.html">Voltar</a></div>
     </main>
