--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
         <p>Fotografia & Audiovisual</p>
     </header>
     <nav>
-        <a href="nkl.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="empresa.html">A EMPRESA</a>
         <a href="portifolio.html">PORTIFÓLIO</a>
         <a href="contato.html">CONTATO</a>
@@ -27,7 +27,7 @@
             <br>Instagram / Tiktok:  @nkl.audiovisual
             <br><a href="https://www.youtube.com/@nkl.audiovisual" target="_blank">YouTube</a>   /   <a href="https://banlek.com/nikolas_oliveira" target="_blank">Banlek</a>
         </section>
-        <div class="back"><a href="nkl.html">Voltar</a></div>
+        <div class="back"><a href="index.html">Voltar</a></div>
     </main>
 </body>
 <footer>Desenvolvido por Nikolas Oliveira. © </footer>
