--- a/portifolio.html
+++ b/portifolio.html
@@ -14,7 +14,7 @@
         <p>Fotografia & Audiovisual</p>
     </header>
     <nav>
-        <a href="nkl.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="empresa.html">A EMPRESA</a>
         <a href="portifolio.html">PORTIFÓLIO</a>
         <a href="contato.html">CONTATO</a>
@@ -30,13 +30,16 @@
             <div class="slide-show" >
               <ul class="slides-list" >
                 <li class="slide" >
-                  <img src="imagens/Elivelton - 436 x 725.jpg" alt="">
+                  <img src="imagens/1 - Elivelton.jpg" alt="Elivelton"/>
+                  <p>Elivelton Rufino</p>
                 </li>
                 <li class="slide" >
-                  <img src="" />
+                  <img src="imagens/2 - Marcos Assunção.jpg" alt="Marcos Assunção"/>
+                  <p>Marcos Assunção</p>
                 </li>
                 <li class="slide" >
-                  <img src="" alt="" />
+                  <img src="imagens/3 - Macedo.jpg" alt="Macedo"/>
+                  <p>Macedo</p>
                 </li>
                 <li class="slide" >
                   <img src="" alt="" />
@@ -69,7 +72,7 @@
               </ul>
             </div>
         </section>
-    <div class="back"><a href="nkl.html">Voltar</a></div>
+    <div class="back"><a href="index.html">Voltar</a></div>
     </main>
 </body>
 <footer>Desenvolvido por Nikolas Oliveira. © </footer>
