--- a/empresa.html
+++ b/empresa.html
@@ -14,7 +14,7 @@
         <p>Fotografia & Audiovisual</p>
     </header>
     <nav>
-        <a href="nkl.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="empresa.html">A EMPRESA</a>
         <a href="portifolio.html">PORTIFÓLIO</a>
         <a href="contato.html">CONTATO</a>
@@ -31,7 +31,7 @@
                 <br><strong>Inovamos</strong> através de técnicas modernas de captura e edição de imagem.
                 <br>Conheça nosso<a href="portifolio.html">Portifólio</a></p>
         </section>
-        <div class="back"><a href="nkl.html">Voltar</a></div>
+        <div class="back"><a href="index.html">Voltar</a></div>
     </main>
 </body>
 <footer>Desenvolvido por Nikolas Oliveira. © </footer>
