--- a/contato.html
+++ b/contato.html
@@ -30,4 +30,5 @@
         <div class="back"><a href="index.html">Voltar</a></div>
     </main>
 </body>
+<footer>Desenvolvido por Nikolas Oliveira. © </footer>
 </html>
