--- a/empresa.html
+++ b/empresa.html
@@ -36,4 +36,5 @@
         <div class="back"><a href="index.html">Voltar</a></div>
     </main>
 </body>
+<footer>Desenvolvido por Nikolas Oliveira. © </footer>
 </html>
