Black Pantera commit

--- a/portifolio.html
+++ b/portifolio.html
@@ -20,9 +20,49 @@
         <a href="contato.html">CONTATO</a>
     </nav>
     <main>
+        <h1>Black Pantera at Backside House</h1><br>
+        <section>
+            <input type="radio" class="slide-controller" name="slide" checked/>
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+            <input type="radio" class="slide-controller" name="slide" />
+                      
+            <div class="slide-show" >
+              <ul class="slides-list" >
+                <li class="slide" >
+                  <img src="imagens/7 - Rodrigo.jpg" alt="Rodrigo Pancho" />
+                  <p><strong>Rodrigo Pancho</strong></p>
+                </li>
+                <li class="slide" >
+                  <img src="imagens/9 - Rodrigo.jpg" alt="Rodrigo Pancho" />
+                  <p><strong>Rodrigo Pancho</strong></p>
+                </li>
+                <li class="slide" >
+                  <img src="imagens/10 - Charles.jpg" alt="Charles da Gama" />
+                  <p><strong>Charles da Gama</strong></p>
+                </li>
+                <li class="slide" >
+                  <img src="imagens/11 - Charles.jpg" alt="Charles da Gama" />
+                  <p><strong>Charles da Gama</strong></p>
+                </li>
+                <li class="slide" >
+                  <img src="imagens/13 - Chaene da Gama.jpg" alt="Chaene da Gama" />
+                  <p><strong>Chaene da Gama</strong></p>
+                  <li class="slide" >
+                    <img src="imagens/14 - Chaene da Gama.jpg" alt="Chaene da Gama" />
+                    <p><strong>Chaene da Gama</strong></p>
+                  </li>
+                </li>
+              </ul>
+            </div>
+
+        </section>
+
         <h1>Veteranos da Seleção Brasileira de Futebol</h1><br>
         <section>
-            <input type="radio" class="slide-controller" name="slide" checked />
+            <input type="radio" class="slide-controller" name="slide" checked/>
             <input type="radio" class="slide-controller" name="slide" />
             <input type="radio" class="slide-controller" name="slide" />
             <input type="radio" class="slide-controller" name="slide" />
