--- a/portifolio.html
+++ b/portifolio.html
@@ -34,25 +34,31 @@
                 <li class="slide" >
                   <img src="imagens/7 - Rodrigo.jpg" alt="Rodrigo Pancho" />
                   <p><strong>Rodrigo Pancho</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/9 - Rodrigo.jpg" alt="Rodrigo Pancho" />
                   <p><strong>Rodrigo Pancho</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/10 - Charles.jpg" alt="Charles da Gama" />
                   <p><strong>Charles da Gama</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/11 - Charles.jpg" alt="Charles da Gama" />
                   <p><strong>Charles da Gama</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/13 - Chaene da Gama.jpg" alt="Chaene da Gama" />
                   <p><strong>Chaene da Gama</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                   <li class="slide" >
                     <img src="imagens/14 - Chaene da Gama.jpg" alt="Chaene da Gama" />
                     <p><strong>Chaene da Gama</strong></p>
+                    <div class="link"><a href="https://www.youtube.com/watch?v=U1vm20-1Qz4&ab_channel=BlackPantera">YouTube</a></div>
                   </li>
                 </li>
               </ul>
@@ -60,7 +66,7 @@
 
         </section>
 
-        <h1>Veteranos da Seleção Brasileira de Futebol</h1><br>
+        <br><h1>Veteranos da Seleção Brasileira de Futebol</h1><br>
         <section>
             <input type="radio" class="slide-controller" name="slide" checked/>
             <input type="radio" class="slide-controller" name="slide" />
@@ -72,28 +78,34 @@
             <div class="slide-show" >
               <ul class="slides-list" >
                 <li class="slide" >
-                  <img src="imagens/1 - Elivelton.jpg" alt="Elivelton" />
+                  <img src="imagens/1 - Elivelton Rufino.jpg" alt="Elivelton" />
                   <p><strong>Elivelton Rufino</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/2 - Marcos Assunção.jpg" alt="Marcos Assunção" />
                   <p><strong>Marcos Assunção</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/3 - Macedo.jpg" alt="Macedo" />
                   <p><strong>Macedo</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/4 - Alexandre Rotweiller.jpg" alt="Alexandre Rotweiller" />
                   <p><strong>Alexandre Rotweiller</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/5 - Veloso.jpg" alt="Veloso" />
                   <p><strong>Veloso</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
                 <li class="slide" >
                   <img src="imagens/6 - Vitor.jpg" alt="Vitor" />
                   <p><strong>Vitor</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
               </ul>
             </div>
