conexao underground commit

--- a/portifolio.html
+++ b/portifolio.html
@@ -20,7 +20,97 @@
         <a href="contato.html">CONTATO</a>
     </nav>
     <main>
-        <h1>Black Pantera at Backside House</h1><br>
+      <h1>MC Marechal at Conexão Underground</h1><br>
+      <section>
+          <input type="radio" class="slide-controller" name="slide" checked/>
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+                    
+          <div class="slide-show" >
+            <ul class="slides-list" >
+              <li class="slide" >
+                <img src="imagens/21 - MC Marechal.jpg" alt="MC Marechal" />
+                <p><strong>MC Marechal</strong></p>
+                <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/22 - MC Marechal.jpg" alt="MC Marechal" />
+                <p><strong>MC Marechal</strong></p>
+                <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/23 - MC Marechal.jpg" alt="MC Marechal" />
+                <p><strong>MC Marechal</strong></p>
+                <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/24 - MC Marechal.jpg" alt="MC Marechal" />
+                <p><strong>MC Marechal</strong></p>
+                <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/25 - MC Marechal.jpg" alt="MC Marechal" />
+                <p><strong>MC Marechal</strong></p>
+                <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+                <li class="slide" >
+                  <img src="imagens/26 - MC Marechal.jpg" alt="MC Marechal" />
+                  <p><strong>MC Marechal</strong></p>
+                  <div class="link"><a href="https://www.youtube.com/watch?v=R_4Clufmtq8">YouTube</a></div>
+                </li>
+              </li>
+            </ul>
+          </div>
+      </section>
+
+      <br><h1>Dj Check at Conexão Underground</h1><br>
+      <section>
+          <input type="radio" class="slide-controller" name="slide" checked/>
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+          <input type="radio" class="slide-controller" name="slide" />
+                    
+          <div class="slide-show" >
+            <ul class="slides-list" >
+              <li class="slide" >
+                <img src="imagens/15 - Dj Check.jpg" alt="DJ Check" />
+                <p><strong>Dj Check</strong></p>
+                <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/16 - Dj Check.jpg" alt="DJ Check" />
+                <p><strong>Dj Check</strong></p>
+                <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/17 - Dj Check.jpg" alt="DJ Check" />
+                <p><strong>Dj Check</strong></p>
+                <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/18 - Dj Check.jpg" alt="DJ Check" />
+                <p><strong>Dj Check</strong></p>
+                <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+              </li>
+              <li class="slide" >
+                <img src="imagens/19 - Dj Check.jpg" alt="DJ Check" />
+                <p><strong>Dj Check</strong></p>
+                <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+                <li class="slide" >
+                  <img src="imagens/20 - Dj Check.jpg" alt="DJ Check" />
+                  <p><strong>Dj Check</strong></p>
+                  <div class="link"><a href="https://m.soundcloud.com/renan-centini?fbclid=PAZXh0bgNhZW0CMTEAAaZn-QH1E8hl0Ek1TGXM1Qm_yFNdXhS8XLKc-itMxWxOjeg7yw3XkPdRCIk_aem_Rb83HvsM_JCkh_fr83yf9w">SoundCloud</a></div>
+                </li>
+              </li>
+            </ul>
+          </div>
+      </section>
+
+        <br><h1>Black Pantera at Backside House</h1><br>
         <section>
             <input type="radio" class="slide-controller" name="slide" checked/>
             <input type="radio" class="slide-controller" name="slide" />
@@ -63,7 +153,6 @@
                 </li>
               </ul>
             </div>
-
         </section>
 
         <br><h1>Veteranos da Seleção Brasileira de Futebol</h1><br>
@@ -78,7 +167,7 @@
             <div class="slide-show" >
               <ul class="slides-list" >
                 <li class="slide" >
-                  <img src="imagens/1 - Elivelton Rufino.jpg" alt="Elivelton" />
+                  <img src="imagens/1 - Elivelton Rufino.jpg" alt="Elivelton Rufino" />
                   <p><strong>Elivelton Rufino</strong></p>
                   <div class="link"><a href="https://www.youtube.com/watch?v=iVOiTVvicuk&ab_channel=NKLM%C3%ADdiasDigitais">YouTube</a></div>
                 </li>
