--- a/empresa.html
+++ b/empresa.html
@@ -27,7 +27,7 @@
                 <br>Trabalhamos com <strong>Excelência</strong>, pois nossa <strong>Missão</strong> é alcançar sua <strong>Satisfação</strong>!
                 <br>Temos como <strong>Visão</strong>, retratar a realidade através de nossas lentes.
                 <br>Nossos valores englobam <strong>Compromisso, Qualidade</strong> e<strong> Inovação.</strong>
-                <br>Respeitamos o <strong>Compromisso</strong> assumido com nossos clientes.
+                <br>Respeitamos o <strong>Compromisso</strong> assumido com nossos <strong>Clientes</strong>.
                 <br>Produzimos com máxima <strong>Qualidade</strong>!
                 <br><strong>Inovamos</strong> através de técnicas modernas de captura e edição de imagem.
                 <br>Conheça nosso<a href="portifolio.html">Portifólio</a></p>
