--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <section>
                 <h1>Seja bem-vindo!</h1>
                 <p>A <strong>NKL Mídias Digitais</strong> atua na produção de conteúdo <strong>Fotográfico </strong>e<strong> Audiovisual.</strong>
-                <br>Conheça nosso<a href="portifolio.html"><u>Portifólio</u></a></p>
+                <br>Conheça nosso<a href="portifolio.html">Portifólio</a></p>
         </section>
-    <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/qZCdZzX91zw?si=UovgQvQvScf3uWJA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+    <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/iPAwGlha2V4?si=nA4YvbSnEwTXGYY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     </main>
 </body>
 <footer>Desenvolvido por Nikolas Oliveira. © </footer>
